--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,11 @@ typings/
 
 # FuseBox cache
 .fusebox/
+
+# VSCode
+.vscode/\*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.prettierrc
